--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-<h1> Hello World</h1>
+<!doctype html>
+<html>
+  <head>
+      <meta charset="utf-8">
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>GOC - HOME</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css">
+      <link rel="stylesheet" href="scribbler-global.css">
+      <link rel="stylesheet" href="scribbler-landing.css">
+      <link rel="author" href="humans.txt">
+  </head>
+  <body>
+    <nav>
+      <div class="logo"></div>
+      <ul class="menu">
+        <div class="menu__item toggle"><span></span></div>
+        <li class="menu__item"><a href="doc.html" class="link link--dark"><i class="fa fa-book"></i> Documentation</a></li>
+        <li class="menu__item"><a href="" class="link link--dark"><i class="fa fa-github"></i> Github</a></li>
+      </ul>
+    </nav>
+    <div class="hero">
+      <h1 class="hero__title">GOC</h1>
+      <p class="hero__description">Set of utility functions for easy canvas game development</p>
+    </div>
+    <div class="hero__terminal">
+      <pre>
+        <!-- Place your demo code here -->
+        <code class="shell-session demo"></code>
+      </pre>
+    </div>
+    <div class="wrapper">
+      <div class="installation">
+        <h3 class="section__title">Installation</h3>
+        <div class="tab__container">
+          <ul class="tab__menu">
+            <li class="tab active" data-tab="mac">Browser</li>
+          </ul>
+          <pre class="nohighlight code">
+            <code class="tab__pane active mac">
+              &ltscript src="http://goc.rf.gd/goc.js"&gt &lt/script&gt<br>
+                                      (or) <br>
+              &ltscript src="https://gocscript.000webhostapp.com/goc.js"&gt &lt/script&gt
+            </code>
+          </pre>
+        </div>
+      </div>
+      <div class="feature">
+        <div class="feature__item">
+          <h3 class="section__title">Solid Game Loop</h3>
+          <p>Solid Gameloop with delta time (time between two frames) and context</p>
+        </div>
+        <div class="feature__item">
+          <h3 class="section__title">Async Asset Preloader</h3>
+          <p>Load images, sprites before animate them on screen</p>
+        </div>
+        <div class="feature__item">
+          <h3 class="section__title">Virtual JoyStick</h3>
+          <p> Control any game object with joystick with just one line of code </p>
+        </div>
+        <div class="feature__item">
+          <h3 class="section__title">Sprite Sheet Animation</h3>
+          <p>Animate any type of sprite sheets either <span class="code code--inline">SINGLE IMAGE </span>or <span class="code code--inline"> SEPERATE IMAGES</span> </p>
+        </div>
+        <div class="feature__item">
+          <h3 class="section__title">TileMap Generator</h3>
+          <p>Easy UI to generate Tile Maps with Collision Detection</p>
+        </div>
+        <div class="feature__item">
+          <h3 class="section__title">Collision Detection</h3>
+          <p> Detect and resolve collision between any tow or more Game Entities</p>
+        </div>
+      </div>
+      <!--<div class="keybinding">
+        <ul class="keybinding__detail">
+          <h3 class="keybinding__title">Default Keybindings</h3>
+          <li>Quit without saving <span class="keybinding__label">Ctrl+C</span></li>
+          <li>Save <span class="keybinding__label">Cmd+S</span></li>
+          <li>Save and Quit <span class="keybinding__label">Ctrl+D</span></li>
+          <li>Undo <span class="keybinding__label">Cmd+Z</span></li>
+        </ul>
+        <ul class="keybinding__detail">
+          <h3 class="keybinding__title">Markdown Keybindings</h3>
+          <li><span class="keybinding__label">Ctrl+A</span> Insert Link Markdown</li>
+          <li><span class="keybinding__label">Ctrl+I</span> Insert Image Markdown</li>
+          <li><span class="keybinding__label">Ctrl+V</span> Insert YouTube Video</li>
+          <li><span class="keybinding__label">Ctrl+T</span> Insert Table</li>
+        </ul>
+      </div>-->
+      <div class="callout">
+        <p>Read documentation for how to use GOC script</p>
+        <a href="doc.html" class="button--primary">Documentation</a>
+      </div>
+    </div>
+    <div class="changelog">
+      <div class="wrapper">
+        <h3 class="section__title">Changelog</h3>
+        <div class="changelog__item">
+          <div class="changelog__meta">
+            <h4 class="changelog__title">v1.0</h4>
+            <small class="changelog__date"></small>
+          </div>
+          <div class="changelog__detail">
+            <ul>
+              <li>RELEASE VERSION</li>
+            </ul>
+          </div>
+        </div>
+        <!--
+        <div class="changelog__item">
+          <div class="changelog__meta">
+            <h4 class="changelog__title">v0.6</h4>
+            <small class="changelog__date">7/30/2017</small>
+          </div>
+          <div class="changelog__detail">
+            <ul>
+              <li>Adding Unicode support</li>
+              <li>Basic text highlighting</li>
+              <li>Fresh Design</li>
+            </ul>
+          </div>
+        </div>
+        <div class="changelog__item">
+          <div class="changelog__meta">
+            <h4 class="changelog__title">v0.5</h4>
+            <small class="changelog__date">5/10/2017</small>
+          </div>
+          <div class="changelog__detail">
+            <ul>
+              <li>Save default md file in new folders</li>
+              <li>Ability to quick search on existing notes</li>
+            </ul>
+          </div>
+        </div>
+        <div class="changelog__callout">
+          <a href="#" class="button--secondary">Checkout Full Log</a>
+        </div>-->
+      </div>
+    </div>
+    <!--<footer class="footer">Scribbler is a free HTML template created exclusively for <a href="https://tympanus.net/codrops/" target="_blank" class="link link--light">Codrops</a>.</footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    -->
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="scribbler.js"></script>
+  </body>
+</html>
