--- a/doc.html
+++ b/doc.html
@@ -304,6 +304,20 @@
                         })
                       </code>
                     </pre>
+              <h3>customize joy stick as you like </h3>
+              <pre class="code code--block">
+              <code>
+                goc.createJoystick(box, {
+                  innerRadius : 10,
+                  outerRadius : 30,
+                  innerFillStyle : "red",
+                  outerFillStyle : "yellow",
+                  power : 100,
+                  default : false
+                });
+              </code>
+              </pre>
+                  
                     <h1><a href="joystick.html">Click here to play with Demo (for Android)</a></h1>
 
                     <h1>TILEMAP, COLLISION DETECTION.... (Under Development)</h1>
