--- a/doc.html
+++ b/doc.html
@@ -273,6 +273,7 @@
                       goc.jRight( ), goc.jLeft( ), goc.jUp( ), goc.jDown( ) <br>
                        these function take another function as parameter <br>
                        and that callback functions trigger respective to its direction
+              <p><a href="customized.html">Best Example using above mentioned functions</a></p>
                     </p>
                     <pre class="code code--block">
                       <code>
