--- a/combined.html
+++ b/combined.html
@@ -1,4 +1,8 @@
+
+<head>
 <script src="https://gocscript.000webhostapp.com/goc.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 Image Source : <input id="source" value="https://gocscript.000webhostapp.com/enemie.png"> <br>
 
