--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <div class="hero">
-      <h1 class="hero__title"><a href="https://dashboard.blomp.com/dashboard/storage/download_object?path=goc_min.js&filename=goc_min.js&size=5254">GOC</a></h1>
+      <h1 class="hero__title"><a href="https://drive.google.com/file/d/1GeVUt2MEdrjLEChhInAk_StnBfw0dTxV/view?usp=sharing">GOC</a></h1>
       <p class="hero__description">Set of utility functions for easy canvas game development</p>
     </div>
     <div class="hero__terminal">
