--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="hero">
       <h1 class="hero__title"><a href="https://drive.google.com/file/d/1GeVUt2MEdrjLEChhInAk_StnBfw0dTxV/view?usp=sharing">GOC</a></h1>
       <p class="hero__description">Set of utility functions for easy canvas game development</p>
+      <a href="https://drive.google.com/file/d/1XCzKCoaCdZ8If7SUWbL1RHSDxnOEycoZ/view?usp=sharing"><h3>Download App</h3></a>
     </div>
     <div class="hero__terminal">
       <pre>
